Changing gitconfig to match my credentials.

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -58,3 +58,8 @@
 	autosquash = true
 [diff]
 	algorithm = patience
+[github]
+	user = vjustov
+[user]
+	email = viktor@vjustov.me
+	name = "Viktor Justo Vasquez"
